0023115: Polygon offset doesn't applied in Viewer3D sample

- AIS_InteractiveObject::SetPolygonOffsets() patched to update all object's groups that has AspectFillArea3d set.
- vpolygonoffset DRAW command added.